lab1_volume_begin/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-guestbook-ingress
spec:
  rules:
  - host: guestbook.frontend.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-frontend
            port: 
              number: 80
  - host: guestbook.backend.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-backend
            port:
              number: 80
